<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PotlatchApp</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_view_top_gift_givers_title">View top Gift givers</string>
	<string name="menu_item_logout_title">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname and Port</string>
    <string name="title_activity_view_giftchains">View Gift Chains</string>
	<string name="title_activity_view_giftchain">View Gift Chain</string>
	<string name="title_activity_view_gift">View Gift</string>
	<string name="title_activity_create_gift_chain">Create Gift chain</string>
	<string name="title_activity_create_gift_in_chain">Create Gift in chain</string>
	<string name="title_activity_edit_preferences">Edit Preferences</string>
	<string name="title_activity_view_top_gift_givers">View Top Gift Givers</string>
    <string name="view_gift_listview_filter_hint">Title Filter...</string>
    <string name="gift_view_label_title">Title</string>
    <string name="gift_view_label_text">Text</string>
    <string name="gift_view_label_image_content">Gift Image</string>
    <string name="gift_view_label_created_by_username">Created By</string>
    <string name="gift_view_label_creation_timestamp">Creation Date</string>
    <string name="gift_view_label_touches">Touches</string>
    <string name="gift_view_label_flags">Flags</string>
    <string name="gift_view_touches_default_value">0</string>
    <string name="gift_view_flags_default_value">0</string>
    <string name="gift_radio_touched_value">Touched by Gift</string>
    <string name="gift_radio_flagged_value">Flag Gift</string>
    <string name="gift_create_label_title">Title</string>
    <string name="gift_create_label_text">Text</string>
    <string name="gift_create_label_image_meta_data">Gift Image</string>
    <string name="gift_create_button_select_image_value">Select Image</string>
    <string name="gift_create_button_capture_image_value">Capture Image</string>
    <string name="gift_create_button_cancel_value">Cancel</string>
    <string name="gift_create_button_confirm_value">Confirm</string>
    <string name="gift_view_button_cancel_value">Cancel</string>
    <string name="gift_view_button_confirm_value">Confirm</string>
    <string name="gift_view_button_delete_value">Delete Gift</string>
    <string name="preferences_filter_flagged_gifts_summary">Filter flagged gifts</string>
    <string name="preferences_category_summary">User preferences</string>
    <string name="preferences_category_title">Settings</string>
    <string name="preferences_show_flagged_gifts_summary">On/Off</string>
    <string name="preferences_gift_synchronization_summary">Gift synchronization</string>
    <string name="preferences_gift_synchronization_title">Synchronization preferences</string>
	<string name="view_gift_listview_button_filter_value">Filter</string>
    <string name="view_gift_listview_button_add_value">Add</string>
	<string name="view_gift_listview_button_create_new_chain_value">Create new chain</string>
    <string name="view_gift_listview_button_add_to_chain_value">Add to chain</string>
    <string name="dialog_alert_title_closing_activity">Closing activity</string>
    <string name="dialog_alert_message_confirm_close">Are you sure you want to close this activity?</string>
    <string name="dialog_alert_choice_yes">Yes</string>
    <string name="dialog_alert_choice_no">No</string>
    <string name="dialog_error_connection_failure_message">Connection failure, check your Internet connection and credentials.</string>
    <string name="dialog_error_cannot_create_image_file_message">Cannot create image file for new Gift.</string>
    <string name="dialog_error_invalid_gift_information">Invalid Gift information, check and try again.</string>
    <string name="login_screen_server_default_value">https://10.0.2.2:8443</string>
    <string name="login_screen_username_default_value"></string>
    <string name="login_screen_password_default_value"></string>
    <string name="preferences_default_server_address_title">Address</string>
    <string name="preferences_default_server_address_summary">Default server address</string>
    <string name="preferences_default_server_address_dialog_title">Default server address and port</string>
    <string name="preferences_filter_flagged_gifts_title">Filter rules</string>
    <string name="top_gift_giver_username_placeholder">Username</string>
    <string name="top_gift_giver_touches_placeholder">0</string>
    <string name="gift_listview_title_value_placeholder">Gift title</string>
    <string name="gift_view_value_title_placeholder">Sample Gift title</string>
    <string name="gift_view_value_text_placeholder">Sample Gift text</string>
    <string name="gift_view_value_created_by_username_placeholder">John Doe</string>
    <string name="gift_view_value_creation_timestamp_placeholder">25-10-2014 10:14:37</string>
    <string name="gift_view_value_touches_placeholder">0</string>
    <string name="gift_view_value_flags_placeholder">0</string>
    <string name="gift_create_value_title_placeholder">Sample Gift title</string>
    <string name="gift_create_value_text_placeholder">Sample Gift text</string>
</resources>
