<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_gift_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
		android:id="@+id/view_gift_fragment_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
			android:id="@+id/view_gift_fragment_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gift_view_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_value_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_value_title_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_value_text_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_label_image_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_image_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/gift_view_value_image_content"
                android:src="@drawable/ic_stub"
                android:layout_width="320dp"
                android:layout_height="320dp"/>

            <TextView
                android:id="@+id/gift_view_label_created_by_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_created_by_username"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_value_created_by_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_value_created_by_username_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_label_creation_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_creation_timestamp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_value_creation_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_value_creation_timestamp_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_label_touches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_touches"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_value_touches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_value_touches_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_label_flags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_label_flags"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gift_view_value_flags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gift_view_value_flags_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/view_gift_fragment_radio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioGroup
                    android:id="@+id/vote_gift_toggle_group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ToggleButton android:id="@+id/vote_gift_radio_touched"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textOn="@string/gift_radio_touched_value"
                        android:textOff="@string/gift_radio_touched_value"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ToggleButton android:id="@+id/vote_gift_radio_flagged"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textOn="@string/gift_radio_flagged_value"
                        android:textOff="@string/gift_radio_flagged_value"
                        android:paddingLeft="10dp"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_gift_fragment_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/view_gift_button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_view_button_cancel_value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/view_gift_button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_view_button_confirm_value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/view_gift_button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_view_button_delete_value"
                    android:enabled="false"
                    android:clickable="false"
                    android:visibility="invisible"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
