<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_gift_listview_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/view_gift_listview_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/view_gift_listview_filter_hint">
        <requestFocus />
    </EditText>

    <LinearLayout
		android:id="@+id/view_gift_listview_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/view_gift_listview_button_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_gift_listview_button_filter_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/view_gift_listview_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_gift_listview_button_add_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/view_gift_listview_row" />

</LinearLayout>
